--- a/scripts/sequencing_rpoB/analyses/phylogenetics/plot_phylogeny.qmd
+++ b/scripts/sequencing_rpoB/analyses/phylogenetics/plot_phylogeny.qmd
@@ -38,7 +38,7 @@ Load in the R packages I am going to use.
 # load packages - use librarian::shelf()
 # need to ensure BiocManager and Biobase are installed - BiocManager::install("Biobase")
 # can install packages from GitHub, Bioconductor, and CRAN all at once
-librarian::shelf(here, tidyverse, ggtree, ggnewscale, RColorBrewer, patchwork, ape, phytools, MetBrewer)
+librarian::shelf(here, tidyverse, ggtree, ggnewscale, RColorBrewer, patchwork, ape, phytools, MetBrewer, flextable, officer)
 ```
 
 ## Load in data and do some data wrangling
@@ -315,6 +315,85 @@ d_habpref %>% group_by(habitat_preference3) %>%
 
 ```
 
+We can make this into a super pretty table, allowing us to see the numbers in each group and how different groupings are made.
+
+```{r make_table}
+
+d_table <- group_by(d_habpref, habitat_preference2, habitat_preference) %>%
+  tally() %>%
+  mutate(habitat_preference = case_when(habitat_preference == 'freshwater' ~ 'freshwater specialist',
+                                        habitat_preference == 'freshwater:marine_mud' ~ 'freshwater + marine generalist',
+                                        habitat_preference == 'freshwater:marine_mud:terrestrial' ~ 'full generalist',
+                                        habitat_preference == 'freshwater:terrestrial' ~ 'freshwater + land generalist',
+                                        habitat_preference == 'marine_mud:terrestrial'~ 'land + marine generalist',
+                                        habitat_preference == 'marine_mud'~ 'marine specialist',
+                                        habitat_preference == 'terrestrial'~ 'land specialist'),
+         habitat_preference2 = case_when(habitat_preference2 == 'freshwater' ~ 'freshwater specialist',
+                                        habitat_preference2 == 'marine_mud'~ 'marine specialist',
+                                        habitat_preference2 == 'terrestrial'~ 'land specialist',
+                                        habitat_preference2 == 'freshwater:terrestrial' ~ 'freshwater + land generalist',
+                                        habitat_preference2 == 'marine_mud_generalist' ~ 'marine generalist')) %>%
+  ungroup()
+
+head(d_table)
+
+# write function to add colour circle inside flextable
+# from here: https://stackoverflow.com/questions/71068389/add-coloured-dot-in-new-column-using-dplyr
+colour_choice = function(x){
+  if (x == 'freshwater specialist') {
+    "#16317d"
+  } else if (x =='freshwater + land generalist') {
+    "#ffcd12"
+  } else if (x == 'marine specialist'){
+    "#a40000"
+  }
+    else if (x == 'marine generalist'){
+    "#721b3e"
+  }
+    else('#007e2f')
+  }
+
+colour_choice <- Vectorize(colour_choice)
+
+d_table <- mutate(d_table, first_col = habitat_preference2) %>%
+  select(first_col, everything())
+
+table <- flextable(d_table) %>%
+  set_header_labels(first_col = '',
+                    habitat_preference2 = 'Habitat preference',
+                    habitat_preference = 'Original preference',
+                    n = 'Number of ASVs') %>%
+  font(fontname = 'Times', part = 'all') %>%
+  fontsize(size = 10, part = 'all') %>%
+  align(align = 'center', part = 'all') %>%
+  compose(j = 'first_col', i=1,
+          value = as_paragraph(as_chunk(black_dot, props = fp_text(color = '#16317d'))),
+           part = "body") %>%
+  compose(j = 'first_col', i=2,
+          value = as_paragraph(as_chunk(black_dot, props = fp_text(color = '#ffcd12'))),
+           part = "body") %>%
+  compose(j = 'first_col', i=3,
+          value = as_paragraph(as_chunk(black_dot, props = fp_text(color = '#a40000'))),
+           part = "body") %>%
+  compose(j = 'first_col', i=4,
+          value = as_paragraph(as_chunk(black_dot, props = fp_text(color = '#721b3e'))),
+           part = "body") %>%
+  compose(j = 1:2, i=5,
+          value = as_paragraph(as_chunk('')),
+           part = "body") %>%
+  compose(j = 1:2, i=6,
+          value = as_paragraph(as_chunk('')),
+           part = "body") %>%
+  compose(j = 'first_col', i=7,
+          value = as_paragraph(as_chunk(black_dot, props = fp_text(color = '#007e2f'))),
+           part = "body") %>%
+  hline(i = c(1,2,3,6), border = fp_border_default()) %>%
+  autofit()
+  
+
+save_as_image(table, here('plots/manuscript_plots/hab_pref_table.png'))
+```
+
 We can now replot this tree but we need to remake `d_meta` and also set the colour scheme up again, this time for five colours.
 
 ```{r plot_tree3}
@@ -341,15 +420,45 @@ tree_plot3 <- tree_plot %<+% d_meta_new +
         axis.ticks = element_blank()) +
   new_scale_color() +
   geom_tippoint(aes(x=x+5, col = habitat_preference3, size = rare2), position = position_jitter(width = 3, height = 0)) +
-  scale_color_manual('Habitat preference (tip points)', values = cols_hab2) +
+  scale_color_manual('Habitat preference (tip points)', values = cols_hab2, labels = c('freshwater + land generalist', 'freshwater specialist', 'marine generalist', 'marine specialist', 'land specialist')) +
   scale_size_manual(values = c(0.6, 3)) +
   guides(color = guide_legend(override.aes = list(size = 5)),
          size = 'none')
 
 tree_plot3
 
+# create lineage through time plot
+d_ltt <-  ape::ltt.plot.coords(tree) %>%
+  data.frame() %>%
+  mutate(time2 = time + 1)
+
+# create lineage through time plot
+p2 <- ggplot(d_ltt, aes(time2, N)) +
+  geom_line() +
+  theme_bw(base_size = 14) +
+  labs(x = 'Relative time',
+       y = 'Number of lineages') +
+  theme(plot.margin = unit(c(0,0,0,0), 'mm'))
+
+# make constraint tree
+backbone <- read.tree(here('data/sequencing_rpoB/raxml/backbone.tre'))
+
+backbone_tree <- ggtree(backbone) +
+  geom_tippoint() +
+  geom_tiplab(offset = 0.1, size = MicrobioUoE::pts(10)) +
+  coord_cartesian(clip="off")
+
+# make table with flex table
+
+tree_plot4 <- tree_plot3 + inset_element(backbone_tree, -0.12, 0.0, 0.12,0.19)
+
+table <- png::readPNG(here('plots/manuscript_plots/hab_pref_table.png'), native = TRUE)
+
+(tree_plot4) / (p2 + table) + plot_layout(ncol = 1, heights = c(0.8, 0.2), tag_level = 'new')
+
 # save out
-ggsave(here('plots/sequencing_rpoB/analyses/tree_habpref_combined.png'), tree_plot3, height = 9, width = 12)
+ggsave(here('plots/manuscript_plots/Figure_2.png'), last_plot(), height = 9.5, width = 11)
+
 
 ```
 
