--- a/scripts/sequencing_rpoB/analyses/phylogenetics/post_bamm_analysis.qmd
+++ b/scripts/sequencing_rpoB/analyses/phylogenetics/post_bamm_analysis.qmd
@@ -523,7 +523,14 @@ p1 + p2 + p3
 # save plot out
 ggsave(here('plots/sequencing_rpoB/analyses/bamm_tip_rates.png'), last_plot(), height = 5, width = 17)
 
-p_tiprates <- ggplot(tip_rates, aes(forcats::fct_reorder(hab_pref_axis, n), net_diversification)) +
+
+
+p_tiprates <- mutate(tip_rates, hab_pref_axis = case_when(hab_pref_axis == 'marine mud generalist' ~ 'marine generalist',
+                                                          hab_pref_axis == 'freshwater + terrestrial generalist' ~ 'freshwater + land generalist',
+                                                          hab_pref_axis == 'marine mud specialist' ~ 'marine specialist',
+                                                          hab_pref_axis == 'terrestrial specialist' ~ 'land specialist',
+                                                          hab_pref_axis == 'freshwater specialist' ~ 'freshwater specialist')) %>%
+  ggplot(., aes(forcats::fct_reorder(hab_pref_axis, n), net_diversification)) +
   MicrobioUoE::geom_pretty_boxplot(aes(col = habitat_preference, fill = habitat_preference), show.legend = FALSE) +
   geom_point(shape = 21, fill = 'white', position = position_jitter(width = 0.2), size = 0.8, stroke = 0.6) +
   theme_bw(base_size = 10) +
